manifests/vaultwarden/resources/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  ingress:
  # Ingress controller
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": haproxy-ingress
        app.kubernetes.io/name: haproxy-ingress
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  # SMTP
  - toPorts:
    - ports:
      - port: "25"
        protocol: TCP
      - port: "587"
        protocol: TCP
  # HTTP
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backup
  namespace: vaultwarden
spec:
  endpointSelector:
    matchLabels:
      k8upjob: "true"
  egress:
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  # Offsite backup
  - toFQDNs:
    - matchName: ${backuphost}
  # Metrics
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus-pushgateway
        app.kubernetes.io/name: prometheus-pushgateway
    toPorts:
    - ports:
      - port: "9091"
        protocol: TCP
